--- a/css/main.css
+++ b/css/main.css
@@ -77,9 +77,10 @@ select {
     font: inherit;
 }
 
-body{
+body {
     overflow-x: hidden;
 }
+
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
     * {
@@ -89,9 +90,11 @@ body{
         scroll-behavior: auto !important;
     }
 }
-.item__price__mobile{
+
+.item__price__mobile {
     display: none;
 }
+
 /*Container*/
 .container {
     max-width: 1400px;
@@ -126,6 +129,14 @@ body{
 }
 
 button {
+    cursor: pointer;
+}
+
+.favorites {
+    cursor: pointer;
+}
+
+.trash {
     cursor: pointer;
 }
 
@@ -167,25 +178,27 @@ button {
     opacity: 0.5;
 }
 
-#label__wrapper{
-position: relative;
+#label__wrapper {
+    position: relative;
 }
-.label__amount{
-opacity: 0;
-position: absolute;
-top: -5px;
-right: 3px;
-width: 16px;
-height: 16px;
-color: white;
-border-radius:50% ;
-background-color: #F55123;
-align-items: center;
-text-align: center;
-display: flex;
-justify-content: center;
-font-size: 10px;
+
+.label__amount {
+    opacity: 0;
+    position: absolute;
+    top: -5px;
+    right: 3px;
+    width: 16px;
+    height: 16px;
+    color: white;
+    border-radius: 50%;
+    background-color: #F55123;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
 }
+
 .input__search {
     padding: 20px;
     outline: none;
