--- a/css/mobile-total.css
+++ b/css/mobile-total.css
@@ -1,55 +1,87 @@
-#mobile__total{
+#mobile__total {
     border-radius: 0;
     box-shadow: none;
     display: none;
     position: static;
     width: 320px;
-height: 378px;
-background-color: transparent;
+    height: 378px;
+    background-color: transparent;
 }
-.mobile__delivery{
+
+.mobile__delivery {
     display: none;
 }
-.mobile__title{
+
+.mobile__title {
     font-weight: 700;
-font-size: 20px;
+    font-size: 20px;
 }
-.mobile__style{
-    
+
+.mobile__style {
+
     font-weight: 400;
-font-size: 13px;
+    font-size: 13px;
 }
-.mobile__label{
-   
+
+.mobile__label {
+
     margin-top: 16px;
 }
-.mobile__total__info__payment{
+
+.mobile__total__info__payment {
     margin-top: 16px;
 }
-.mobile__total__info__delivery{
+
+.mobile__total__info__delivery {
     background: #F0ECF4;
-border-radius: 8px;
+    border-radius: 8px;
 }
-.mobile__total__info__payment{
+
+.mobile__total__info__payment {
     background: #F0ECF4;
-border-radius: 8px;
+    border-radius: 8px;
 }
-.mobile__label__total__agreement{
+
+.mobile__label__total__agreement {
     width: 267px;
 }
-.total__info__checkbox{
-margin-top: 0px;
+
+.total__info__checkbox {
+    margin-top: 0px;
 }
-.menu__mobile{
+
+.menu__mobile {
     display: none;
     width: 320px;
     align-items: center;
     justify-content: space-around;
     height: 56px;
-background: #FFFFFF;
-box-shadow: 0px -0.5px 0px rgba(0, 0, 0, 0.3);
-backdrop-filter: blur(2.5px);
+    background: #FFFFFF;
+    box-shadow: 0px -0.5px 0px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(2.5px);
 }
-.header__wrapper__mobile{
-display: none;
+
+.header__wrapper__mobile {
+    display: none;
+}
+
+.mobile__item-menu {
+    position: relative;
+}
+
+.mobile__label__amount {
+    opacity: 0;
+    position: absolute;
+    top: -4px;
+    right: -6px;
+    width: 16px;
+    height: 16px;
+    color: white;
+    border-radius: 50%;
+    background-color: #F55123;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
 }
