--- a/css/payment-method.css
+++ b/css/payment-method.css
@@ -11,9 +11,11 @@
     justify-content: space-between;
     margin-bottom: 16px;
 }
-.total__payment p{
+
+.total__payment p {
     margin-bottom: 0px;
 }
+
 .payment__method__title {
     font-weight: 700;
     font-size: 24px;
@@ -26,7 +28,6 @@
     color: #CB11AB;
 }
 
-.payment__method__bank__account {}
 
 .payment__method__account {
     display: flex;
@@ -58,9 +59,11 @@
     border-radius: 16px;
     height: 216px;
 }
-.container__recipient{
+
+.container__recipient {
     margin-bottom: 26px;
 }
+
 .recipient__title {
     font-weight: 700;
     font-size: 24px;
@@ -103,6 +106,11 @@
     width: 218px;
 }
 
+.wrapper__input__label {
+    position: relative;
+
+}
+
 .recipient__customs {
     margin-top: 4px;
 
@@ -111,12 +119,14 @@
     font-size: 12px;
 
 }
-.wrapper__input__label label{
+
+.wrapper__input__label label {
     display: none;
     font-weight: 400;
     font-size: 12px;
     color: #F55123;
 }
+
 /*Footer*/
 footer {
     z-index: -1;
@@ -128,7 +138,7 @@ footer {
 
 }
 
-.footer__product__text{
+.footer__product__text {
     padding-top: 48px;
     font-size: 13px;
     line-height: 16px;
