--- a/css/modal-delivery.css
+++ b/css/modal-delivery.css
@@ -72,8 +72,10 @@
 }
 
 .form_radio_group {
+    width: 100%;
     margin-bottom: 26px;
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
     overflow: hidden;
 }
 
