--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ body {
     max-width: 1353px;
     margin: 0 auto;
 }
-.container__mobile{
+.container__mobile {
     max-width: 1353px;
     margin: 0 auto;
 }
@@ -240,4 +240,24 @@ button {
     font-size: 13px;
     text-align: end;
     color: #ffffff;
+}
+.notification__block {
+    position: relative;
+}
+.notification__product {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1px 2px 0px;
+    width: 16px;
+    height: 16px;
+    left: 27px;
+    top: -7px;
+    background: #f55123;
+    font-size: 10px;
+    color: white;
+    border-radius: 16px;
+    transform: matrix(1, 0, 0, 1, 0, 0);
 }
