--- a/css/basket.css
+++ b/css/basket.css
@@ -310,7 +310,10 @@ p [data-name="book"] {
 .total {
     padding: 16px 24px 24px 24px;
 }
-
+#plus:hover , #minus:hover {
+transition: all ease .5s;
+color: rgba(0, 0, 0, 0.2);
+}
 .total__wrapper__text p {
     font-weight: 400;
     font-size: 16px;
