--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,21 @@
 @font-face {
-    font-family: SegoeUI;
-    src: local("Segoe UI Light"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2)
-            format("woff2"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff)
-            format("woff"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf)
-            format("truetype");
-    font-weight: 100;
+    font-family: "Segoe UI";
+    src: url("../fonts/SegoeUI.woff2"), url("../fonts/SegoeUI-SemiBold.woff");
+    font-weight: normal;
 }
-
 @font-face {
-    font-family: SegoeUI;
-    src: local("Segoe UI Semilight"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff2)
-            format("woff2"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff)
-            format("woff"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.ttf)
-            format("truetype");
-    font-weight: 200;
-}
-
-@font-face {
-    font-family: SegoeUI;
-    src: local("Segoe UI"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2)
-            format("woff2"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff)
-            format("woff"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf)
-            format("truetype");
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: SegoeUI;
-    src:
-    local("Segoe UI Semibold"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype");
+    font-family: "Segoe UI";
+    src: url("../fonts/SegoeUI-SemiBold.woff2"),
+        url("../fonts/SegoeUI-SemiBold.woff");
     font-weight: 600;
-    }
-    @font-face {
-    font-family: SegoeUI;
-    src:
-    local("Segoe UI Bold"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "Segoe UI";
+    src: url("../fonts/SegoeUI-Bold.woff2"), url("../fonts/SegoeUI-Bold.woff");
     font-weight: 700;
-    }
+}
+
 /* Указываем box sizing */
 *,
 *::before,
